--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         .stop-btn:hover { background: #c82333; transform: scale(1.1); }
         .settle-btn:hover { background: #0056b3; transform: scale(1.1); }
 
-        .end-day-container, .daily-income, .settle-log {
+        .end-day-container {
             text-align: center;
             margin: 30px 0;
             background: #fff;
@@ -187,7 +187,7 @@
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
-        .dark-mode .end-day-container, .dark-mode .daily-income, .dark-mode .settle-log {
+        .dark-mode .end-day-container {
             background: #2a2a2a;
         }
 
@@ -199,6 +199,9 @@
             border-radius: 6px;
             cursor: pointer;
             transition: all 0.3s ease;
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
         }
 
         #endDayButton:hover {
@@ -206,9 +209,86 @@
             transform: scale(1.05);
         }
 
-        .daily-income h2, .settle-log h2 {
+        /* دکمه پاپ‌آپ */
+        #popupButton {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            cursor: pointer;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.3s ease;
+        }
+
+        #popupButton:hover {
+            background: #0056b3;
+            transform: scale(1.1);
+        }
+
+        /* پاپ‌آپ */
+        .popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0.8);
+            background: #fff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+            max-width: 500px;
+            width: 90%;
+            z-index: 1000;
+            animation: popupOpen 0.3s ease forwards;
+        }
+
+        .dark-mode .popup {
+            background: #2a2a2a;
+        }
+
+        @keyframes popupOpen {
+            to { transform: translate(-50%, -50%) scale(1); opacity: 1; }
+        }
+
+        .popup-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             margin-bottom: 15px;
+        }
+
+        .popup-header h2 {
             color: #007bff;
+            font-size: 1.5em;
+        }
+
+        #closePopup {
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 5px;
+        }
+
+        #closePopup svg {
+            width: 24px;
+            height: 24px;
+        }
+
+        .daily-income, .settle-log {
+            margin-bottom: 20px;
+        }
+
+        .daily-income h3, .settle-log h3 {
+            color: #007bff;
+            margin-bottom: 10px;
         }
 
         #settleLog {
@@ -221,6 +301,17 @@
 
         .dark-mode #settleLog {
             border-color: #444;
+        }
+
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.5);
+            z-index: 999;
         }
     </style>
 </head>
@@ -250,18 +341,6 @@
         <div id="billiardsTables" class="tables-grid"></div>
     </div>
 
-    <!-- درآمد روزانه -->
-    <div class="daily-income">
-        <h2>درآمد روزانه</h2>
-        <p id="dailyIncome">0 تومان</p>
-    </div>
-
-    <!-- لاگ تسویه‌ها -->
-    <div class="settle-log">
-        <h2>لاگ تسویه‌ها</h2>
-        <div id="settleLog"></div>
-    </div>
-
     <!-- دکمه پایان روز -->
     <div class="end-day-container">
         <button id="endDayButton">
@@ -270,6 +349,35 @@
             </svg>
             پایان روز
         </button>
+    </div>
+
+    <!-- دکمه پاپ‌آپ -->
+    <button id="popupButton" title="نمایش درآمد و لاگ">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"/>
+            <polyline points="13 2 13 9 20 9"/>
+        </svg>
+    </button>
+
+    <!-- پاپ‌آپ -->
+    <div class="overlay" id="popupOverlay"></div>
+    <div class="popup" id="popup">
+        <div class="popup-header">
+            <h2>گزارشات Vertigo</h2>
+            <button id="closePopup">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M18 6L6 18M6 6l12 12"/>
+                </svg>
+            </button>
+        </div>
+        <div class="daily-income">
+            <h3>درآمد روزانه</h3>
+            <p id="dailyIncome">0 تومان</p>
+        </div>
+        <div class="settle-log">
+            <h3>لاگ تسویه‌ها</h3>
+            <div id="settleLog"></div>
+        </div>
     </div>
 
     <script>
@@ -288,9 +396,44 @@
             ]
         };
 
-        let timers = {};
+        let globalTimer = null;
         let dailyIncome = 0;
         let settleLog = [];
+
+        // به‌روزرسانی تمام تایمرها
+        function updateAllTimers() {
+            let activeTables = 0;
+            Object.keys(tables).forEach(category => {
+                tables[category].forEach(table => {
+                    if (table.active && table.startTime) {
+                        activeTables++;
+                        table.elapsed = new Date() - table.startTime + table.elapsed;
+                        table.cost = calculateCost(table.elapsed, table.rate);
+                        const timerElement = document.getElementById(`timer-${table.id}`);
+                        const costElement = document.getElementById(`cost-${table.id}`);
+                        if (timerElement && costElement) {
+                            timerElement.textContent = formatTime(table.elapsed);
+                            costElement.textContent = `${table.cost.toLocaleString('fa-IR')} تومان`;
+                        }
+                    }
+                });
+            });
+            console.log(`تایمرهای فعال: ${activeTables}`);
+            saveState();
+            if (activeTables === 0 && globalTimer) {
+                clearInterval(globalTimer);
+                globalTimer = null;
+                console.log('تایمر جهانی متوقف شد');
+            }
+        }
+
+        // شروع تایمر جهانی
+        function startGlobalTimer() {
+            if (!globalTimer) {
+                globalTimer = setInterval(updateAllTimers, 1000);
+                console.log('تایمر جهانی شروع شد');
+            }
+        }
 
         // بارگذاری داده‌ها از LocalStorage
         function loadState() {
@@ -313,6 +456,12 @@
                 dailyIncome = state.dailyIncome || 0;
                 settleLog = state.settleLog || [];
             }
+            // شروع تایمر جهانی اگر میز فعالی وجود داره
+            Object.keys(tables).forEach(category => {
+                if (tables[category].some(table => table.active)) {
+                    startGlobalTimer();
+                }
+            });
             updateDailyIncome();
             renderSettleLog();
         }
@@ -358,7 +507,6 @@
                     </button>
                 `;
                 container.appendChild(card);
-                updateTimer(table);
             });
         }
 
@@ -377,7 +525,10 @@
             table.rate = parseInt(value) || 0;
             if (table.active) {
                 table.cost = calculateCost(table.elapsed, table.rate);
-                document.getElementById(`cost-${id}`).textContent = `${table.cost.toLocaleString('fa-IR')} تومان`;
+                const costElement = document.getElementById(`cost-${id}`);
+                if (costElement) {
+                    costElement.textContent = `${table.cost.toLocaleString('fa-IR')} تومان`;
+                }
             }
             saveState();
         }
@@ -395,15 +546,13 @@
                 table.active = true;
                 table.startTime = new Date();
                 table.endTime = null;
-                document.getElementById(`start-${id}`).textContent = table.startTime.toLocaleString('fa-IR');
-                document.getElementById(`end-${id}`).textContent = '-';
-                timers[id] = setInterval(() => {
-                    table.elapsed = new Date() - table.startTime + table.elapsed;
-                    table.cost = calculateCost(table.elapsed, table.rate);
-                    document.getElementById(`timer-${id}`).textContent = formatTime(table.elapsed);
-                    document.getElementById(`cost-${id}`).textContent = `${table.cost.toLocaleString('fa-IR')} تومان`;
-                    saveState();
-                }, 1000);
+                const startElement = document.getElementById(`start-${id}`);
+                const endElement = document.getElementById(`end-${id}`);
+                if (startElement && endElement) {
+                    startElement.textContent = table.startTime.toLocaleString('fa-IR');
+                    endElement.textContent = '-';
+                }
+                startGlobalTimer();
                 saveState();
             }
         }
@@ -413,12 +562,17 @@
             const table = tables[category].find(t => t.id === id);
             if (table.active) {
                 table.active = false;
-                clearInterval(timers[id]);
                 table.elapsed = new Date() - table.startTime + table.elapsed;
                 table.endTime = new Date();
                 table.cost = calculateCost(table.elapsed, table.rate);
-                document.getElementById(`end-${id}`).textContent = table.endTime.toLocaleString('fa-IR');
-                document.getElementById(`cost-${id}`).textContent = `${table.cost.toLocaleString('fa-IR')} تومان`;
+                const endElement = document.getElementById(`end-${id}`);
+                const costElement = document.getElementById(`cost-${id}`);
+                const timerElement = document.getElementById(`timer-${id}`);
+                if (endElement && costElement && timerElement) {
+                    endElement.textContent = table.endTime.toLocaleString('fa-IR');
+                    costElement.textContent = `${table.cost.toLocaleString('fa-IR')} تومان`;
+                    timerElement.textContent = formatTime(table.elapsed);
+                }
                 saveState();
             }
         }
@@ -428,7 +582,6 @@
             const table = tables[category].find(t => t.id === id);
             if (confirm(`آیا می‌خواهید میز ${table.name} را تسویه کنید؟ هزینه: ${table.cost.toLocaleString('fa-IR')} تومان`)) {
                 table.active = false;
-                clearInterval(timers[id]);
                 dailyIncome += table.cost;
                 settleLog.push({
                     table: table.name,
@@ -439,10 +592,16 @@
                 table.startTime = null;
                 table.endTime = null;
                 table.cost = 0;
-                document.getElementById(`timer-${id}`).textContent = formatTime(0);
-                document.getElementById(`start-${id}`).textContent = '-';
-                document.getElementById(`end-${id}`).textContent = '-';
-                document.getElementById(`cost-${id}`).textContent = '0 تومان';
+                const timerElement = document.getElementById(`timer-${id}`);
+                const startElement = document.getElementById(`start-${id}`);
+                const endElement = document.getElementById(`end-${id}`);
+                const costElement = document.getElementById(`cost-${id}`);
+                if (timerElement && startElement && endElement && costElement) {
+                    timerElement.textContent = formatTime(0);
+                    startElement.textContent = '-';
+                    endElement.textContent = '-';
+                    costElement.textContent = '0 تومان';
+                }
                 updateDailyIncome();
                 renderSettleLog();
                 saveState();
@@ -451,15 +610,20 @@
 
         // به‌روزرسانی درآمد روزانه
         function updateDailyIncome() {
-            document.getElementById('dailyIncome').textContent = `${dailyIncome.toLocaleString('fa-IR')} تومان`;
+            const dailyIncomeElement = document.getElementById('dailyIncome');
+            if (dailyIncomeElement) {
+                dailyIncomeElement.textContent = `${dailyIncome.toLocaleString('fa-IR')} تومان`;
+            }
         }
 
         // رندر لاگ تسویه‌ها
         function renderSettleLog() {
             const logContainer = document.getElementById('settleLog');
-            logContainer.innerHTML = settleLog.map(log => `
-                <p>${log.time} - ${log.table}: ${log.cost.toLocaleString('fa-IR')} تومان</p>
-            `).join('');
+            if (logContainer) {
+                logContainer.innerHTML = settleLog.map(log => `
+                    <p>${log.time} - ${log.table}: ${log.cost.toLocaleString('fa-IR')} تومان</p>
+                `).join('');
+            }
         }
 
         // مدیریت تب‌ها
@@ -486,17 +650,27 @@
                 Object.keys(tables).forEach(category => {
                     tables[category].forEach(table => {
                         table.active = false;
-                        clearInterval(timers[table.id]);
                         table.elapsed = 0;
                         table.startTime = null;
                         table.endTime = null;
                         table.cost = 0;
-                        document.getElementById(`timer-${table.id}`).textContent = formatTime(0);
-                        document.getElementById(`start-${table.id}`).textContent = '-';
-                        document.getElementById(`end-${table.id}`).textContent = '-';
-                        document.getElementById(`cost-${table.id}`).textContent = '0 تومان';
+                        const timerElement = document.getElementById(`timer-${table.id}`);
+                        const startElement = document.getElementById(`start-${table.id}`);
+                        const endElement = document.getElementById(`end-${table.id}`);
+                        const costElement = document.getElementById(`cost-${table.id}`);
+                        if (timerElement && startElement && endElement && costElement) {
+                            timerElement.textContent = formatTime(0);
+                            startElement.textContent = '-';
+                            endElement.textContent = '-';
+                            costElement.textContent = '0 تومان';
+                        }
                     });
                 });
+                if (globalTimer) {
+                    clearInterval(globalTimer);
+                    globalTimer = null;
+                    console.log('تایمر جهانی متوقف شد (پایان روز)');
+                }
                 dailyIncome = 0;
                 settleLog = [];
                 updateDailyIncome();
@@ -505,18 +679,23 @@
             }
         });
 
-        // به‌روزرسانی تایمر
-        function updateTimer(table) {
-            if (table.active) {
-                timers[table.id] = setInterval(() => {
-                    table.elapsed = new Date() - table.startTime + table.elapsed;
-                    table.cost = calculateCost(table.elapsed, table.rate);
-                    document.getElementById(`timer-${table.id}`).textContent = formatTime(table.elapsed);
-                    document.getElementById(`cost-${table.id}`).textContent = `${table.cost.toLocaleString('fa-IR')} تومان`;
-                    saveState();
-                }, 1000);
-            }
-        }
+        // مدیریت پاپ‌آپ
+        document.getElementById('popupButton').addEventListener('click', () => {
+            document.getElementById('popup').style.display = 'block';
+            document.getElementById('popupOverlay').style.display = 'block';
+            updateDailyIncome();
+            renderSettleLog();
+        });
+
+        document.getElementById('closePopup').addEventListener('click', () => {
+            document.getElementById('popup').style.display = 'none';
+            document.getElementById('popupOverlay').style.display = 'none';
+        });
+
+        document.getElementById('popupOverlay').addEventListener('click', () => {
+            document.getElementById('popup').style.display = 'none';
+            document.getElementById('popupOverlay').style.display = 'none';
+        });
 
         // بارگذاری اولیه
         loadState();
